Ajuste do nome da aplicação

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/rr.cardapio-simples.front-end",
+            "outputPath": "dist/layout.flex.menu.lateral",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
