--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rr.cardapio-simples.front-end",
+  "name": "layout.flex.menu.lateral",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
